--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
     --cor-de-fundo: #ea00ff ;
     --fundo-senha: #030303	;
     --fundo-texto: #cc08ccce;
-    --borda: #ff0000 ;
+    --borda: #000000 ;
     --roboto: 'Bebas Neue', sans-serif;
     --roboto-mono: 'Bebas Neue', monospace;
 }
